# Log4Vala

./: meson.build
src/: Config.vala  Core.vala
